Add sharing icons.

--- a/templates/basic_base.tmpl
+++ b/templates/basic_base.tmpl
@@ -86,13 +86,11 @@
       {{ content_footer }}
     </div>
     </footer>
-<script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/platform.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
-</script>
+
     {{ body_end }}
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://platform.twitter.com/widgets.js" async defer></script>
+
   </body>
 </html>
